# frp-manager

./: .prettierrc.json5  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/frp-doc/: offline-search-index.a23c269245e3cd3fcd402c1814cbf432.json
src-tauri/resources/frp-doc/en/: 404.html  index.html  index.json
src-tauri/resources/frp-doc/en/docs/: index.html
src-tauri/resources/frp-doc/en/docs/concepts/: index.html
src-tauri/resources/frp-doc/en/docs/examples/: index.html
src-tauri/resources/frp-doc/en/docs/faq/: index.html
src-tauri/resources/frp-doc/en/docs/features/: index.html
src-tauri/resources/frp-doc/en/docs/overview/: index.html
src-tauri/resources/frp-doc/en/docs/reference/: index.html
src-tauri/resources/frp-doc/en/docs/setup/: index.html
src-tauri/resources/frp-doc/en/search/: index.html
src-tauri/resources/frp-doc/zh-cn/: 404.html  index.html  index.json  index.xml
src-tauri/resources/frp-doc/zh-cn/docs/: index.html
src-tauri/resources/frp-doc/zh-cn/docs/concepts/: index.html
src-tauri/resources/frp-doc/zh-cn/docs/examples/: index.html
src-tauri/resources/frp-doc/zh-cn/docs/faq/: index.html
src-tauri/resources/frp-doc/zh-cn/docs/features/: index.html
src-tauri/resources/frp-doc/zh-cn/docs/overview/: index.html
src-tauri/resources/frp-doc/zh-cn/search/: index.html
src-tauri/src/: auto_start.rs  db_log.rs  frp_doc.rs  frp_manager.rs  frpc.rs  lib.rs  main.rs  number_map.rs
(+89 files in other folders)
